# cmake-starter

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  devkit
.github/workflows/: cmake.yml
Doxygen/: Doxyfile
app/: CMakeLists.txt
app/examples/: CMakeLists.txt
app/include/starter_app/: version.hpp
app/src/: CMakeLists.txt  main.cpp
app/tests/: CMakeLists.txt
cmake/: CompilerWarnings.cmake  utils.cmake
core/: CMakeLists.txt
core/examples/: CMakeLists.txt  core_example.cpp
core/include/starter_core/: add.hpp  version.hpp
core/src/: CMakeLists.txt  add.cpp
core/tests/: CMakeLists.txt  add_test.cpp
examples/: CMakeLists.txt  starter_example.cpp
include/starter/: addition.hpp
src/: addition.cpp  main.cpp
starter_core/examples/: version_example.cpp
starter_core/include/starter/: rest.hpp  version.hpp
starter_core/src/: rest.cpp
starter_core/tests/: CMakeLists.txt
tests/: CMakeLists.txt  starter_tests.cpp
tooling/: clang.py  cli.py  compiler.py  packager.py  settings.py
tools/: buildpkg  buildpkg.py  cmake_tool
tools/cmake_tooling/: cli.py  packager.py  settings.py  utils.py
